[package]
name = "rustorrent"
version = "0.1.0"
authors = ["optifat <pavsmel@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
async-std = "1.10.0"
sha-1 = "0.9.4"
curl = "0.4.36"
rand = "0.8.3"
url = "2.2.2"
