[package]
name = "rusty_torrent"
version = "0.1.0"
authors = ["optifat <pavsmel@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = "0.3"
tokio = { version = "1.11.0", features = ["full"] }
portpicker = "0.1.1"
sha-1 = "0.9.4"
curl = "0.4.36"
rand = "0.8.3"
url = "2.2.2"
